objects/Sort_Order__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sort Order in different languages</description>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Sort_Order__c</fullName>
        <description>This is used for LCRm Subscription functionality. Salesforce to SAP System</description>
        <label>LCRM_Sort_Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portuguese__c</fullName>
        <label>Portuguese</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish__c</fullName>
        <label>Spanish</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sort Order</label>
</CustomObject>